@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2008  Vasco Nunes, Piotr Ożarowski
 
+2008-05-08  Michael Jahn
+	* updated DVD Empire plugin
+
 2008-04-25  Michael Jahn
 	* fixed fetching posters from Amazon 
 
